--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,85 +1,23 @@
-    
-    <section class="p-4">
-      <!-- Footer -->
-      <footer class="text-center text-lg-start bg-light text-muted">
 
-        <!-- Section: Links  -->
-        <section class="">
-          <div class="container text-center text-md-start mt-5">
-            <!-- Grid row -->
-            <div class="row mt-3">
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                <!-- Content -->
-                <h6 class="text-uppercase fw-bold mb-4">
- Space Telescope Science Institute
-                </h6>
-                <p>
-Space Telescope Science Institute helps humanity to explore the universe by performing scientific operations for the Hubble and James Webb space telescopes and by sharing open astronomical data and research with the world.
-                </p>
-              </div>
-              <!-- Grid column -->
+<section class="p-4">
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-light text-muted">
 
-              <!-- Grid column -->
-              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Products
-                </h6>
-                <p>
-                  <a href="#!" class="text-reset">Angular</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">React</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Vue</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Laravel</a>
-                </p>
-              </div>
-              <!-- Grid column -->
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col">
+      <img style="width:inherit" src="assets/images/stsci-narrow.jpg" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" loading="lazy">
+    </div>
+    <div class="col">
+      <img style="width:inherit" src="assets/images/quansight.png" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" loading="lazy">
+    </div>
+    <div class="col">
+      <img style="width:inherit" src="/assets/images/iota.svg" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" loading="lazy">
+    </div>
+  </div>
+</div>
 
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  Useful links
-                </h6>
-                <p>
-                  <a href="#!" class="text-reset">Pricing</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Settings</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Orders</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Help</a>
-                </p>
-              </div>
-              <!-- Grid column -->
 
-              <!-- Grid column -->
-              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                <p>
-                  <i class="fas fa-envelope me-3"></i>
-                  info@example.com
-                </p>
-                <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-          </div>
-        </section>
-        <!-- Section: Links  -->
 
         <!-- Copyright -->
         <div class="text-left p-4" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -87,7 +25,7 @@ Space Telescope Science Institute helps humanity to explore the universe by perf
 
         </div>
         <!-- Copyright -->
-      </footer>
-      <!-- Footer -->
-    </section>
-    
+  </footer>
+  <!-- Footer -->
+</section>
+
