CHanged path to iota logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <img style="width:inherit" src="assets/images/quansight.png" class="d-block mx-lg-auto img-fluid" alt="Quansight partner logo" loading="lazy">
     </div>
     <div class="col">
-      <img style="width:inherit" src="/assets/images/iota.svg" class="d-block mx-lg-auto img-fluid" alt="Iota partner logo" loading="lazy">
+      <img style="width:inherit" src="assets/images/iota.svg" class="d-block mx-lg-auto img-fluid" alt="Iota partner logo" loading="lazy">
     </div>
   </div>
 </div>
