--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-<section class="p-4">
+<section>
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted">
 
@@ -12,7 +12,7 @@
       <img style="width:inherit" src="assets/images/quansight.png" class="d-block mx-lg-auto img-fluid" alt="Quansight partner logo" loading="lazy">
     </div>
     <div class="col">
-      <img style="width:inherit" src="assets/images/iota.svg" class="d-block mx-lg-auto img-fluid" alt="Iota partner logo" loading="lazy">
+      <img style="width:inherit" src="/assets/images/iota.svg" class="d-block mx-lg-auto img-fluid" alt="Iota partner logo" loading="lazy">
     </div>
   </div>
 </div>
