Added new STScI logo, added link to notebooks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="col">
-      <img style="width:inherit" src="assets/images/stsci-narrow.jpg" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" loading="lazy">
+      <img style="width:inherit" src="assets/images/STlogo.svg" class="d-block mx-lg-auto img-fluid" alt="Space Telescope Science Institute logo" loading="lazy">
     </div>
     <div class="col">
       <img style="width:inherit" src="assets/images/quansight.png" class="d-block mx-lg-auto img-fluid" alt="Quansight partner logo" loading="lazy">
