--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -39,3 +39,15 @@ body {
     margin: 0 5% 0 10%;
     margin-bottom: 2em;
 }
+
+#schedule ul li {
+     list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+#schedule ul {
+    padding: 0;
+    margin: 0;
+}
