Added meta description and small edit to schedule

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ site.title }}</title>
+    <meta name="description" content="At the Day of Accessibility, learn about accessibility efforts at STScI focusing on alt text, Jupyter Notebooks, and data sonification. ">
+    
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
 
