--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -24,7 +24,7 @@ body {
     width:  100%;
     height: 15rem;
     object-fit: contain;
-    background-color: $secondary;    
+    background-color: $secondary;
 }
 
 
@@ -39,6 +39,11 @@ body {
     margin: 0 5% 0 10%;
     margin-bottom: 2em;
 }
+
+.no-bullet-list {
+    list-style-type: none;
+}
+
 
 #schedule ul li {
     list-style-type: none;
