--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ site.title }}</title>
-    <meta name="description" content="At the Day of Accessibility, learn about accessibility efforts at STScI focusing on alt text, Jupyter Notebooks, and data sonification. ">
+    <meta name="description" content="Information and registration for the Nonvisual Data Science workshops series hosted by Pandas and Iota">
     
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
