--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta property="og:type" content="assets/images/pandas.jpg"">
+    <meta property="og:image" content="assets/images/pandas.jpg""/>
+    <meta property="og:type" content="event"">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ site.title }}</title>
