Added id for transcripts

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,10 @@ table td ul li a {
     margin-bottom: 1em;
     
 }
+
+
+#transcripts li {
+    display: inline;
+    padding: .25em;
+    margin-right: .25em
+}
